# libruspy

./: .gitignore  README.md  pyproject.toml  sample.py
librus/: Calendar.py  Librus.py  LibrusMsgs.py  __init__.py  msgCenter.py
